Feature/springboot 4 migration (#114)
* chore: upgrade Spring Boot and Spring Cloud dependencies to version 4.0.2 and 2025.0.1 respectively

* refactor: update imports to use tools.jackson for ObjectMapper and adjust Spring Boot test annotations

* refactor: update User and LoginService tests to use builder pattern and improve readability